--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,7 @@ source: content
 paginate: 3
 
 project_dir: projects
-category_dir: category
 tag_dir: tag
 
-tag_title_prefix: Archive for tag
-tag_meta_description_prefix: Damian Zaremba's Blog Tag 
-
-category_title_prefix: Archive for category
-category_meta_description_prefix: Damian Zaremba's Blog Category 
+tag_title_prefix: Archive for
+tag_meta_description_prefix: Damian Zaremba's Blog -
