--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ project_dir: projects
 tag_dir: tag
 
 tag_title_prefix: Archive for
-tag_meta_description_prefix: Damian Zaremba's Blog -
+tag_meta_description_prefix: Damian Zaremba's Blog Archive For 
