Adding in excerpt_separator to the config to fix Jekyll 1.1 issues

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ exclude: ["README.md", "get_tags.py", ".git", ".svn"]
 source: content
 paginate: 5
 
+excerpt_separator:
+
 tag_dir: tag
 tag_title_prefix: Archive for
 tag_meta_description_prefix: Damian Zaremba's Blog Archive For 
