Remove .svn from exclude - will never use SVN again. Add in .gitignore and .gitkeep, these may be used

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: rdiscount
 pygments: true
 lsi: true
 
-exclude: ["README.md", "get_tags.py", ".git", ".svn"]
+exclude: ["README.md", "get_tags.py", ".git", ".gitignore", ".gitkeep"]
 source: content
 paginate: 5
 
