--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ lsi: true
 exclude: ["README.md", "get_tags.py", ".git", ".gitignore", ".gitkeep"]
 source: content
 paginate: 5
+paginate_path: ":num"
 
 excerpt_separator:
 
