--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
     - build-essential
     - wget
     - python-requests
+    - graphviz
 script: bundle exec make -s install
 env:
   global:
