--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ port: 4039
 markdown: rdiscount
 highlighter: pygments
 lsi: false
+show_drafts: false
+future: false
 
 exclude: ["README.md", "get_tags.py", ".git", ".gitignore", ".gitkeep"]
 source: content
