Fix graphviz plugin

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ gems:
   - jekyll-sitemap
   - jekyll-paginate
 
+graphviz:
+  options: "-Tsvg"
+
 tag_dir: tag
 tag_title_prefix: Archive for
 tag_meta_description_prefix: Damian Zaremba's Blog Archive For
