--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Install system dependancies
         run: |
+          sudo apt-get update && \
           sudo apt-get install -y \
             git wget graphviz \
             openjdk-8-jre python \
