--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
           token: '${{ secrets.GH_TOKEN }}'
 
       - name: Install system dependancies
-        run: sudo apt-get install -y python python-yaml
+        run: sudo apt-get update && sudo apt-get install -y python python-yaml
 
       - name: Promote a pending entry
         run: ./scripts/promote_pending.py
