--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           sudo gem install bundler
 
       - name: Install bundle dependancies
-        run: bundle install
+        run: sudo bundle install
 
       - name: Update external data
         run: make update
