--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           sudo apt-get update && \
           sudo apt-get install -y \
-            git wget graphviz \
-            openjdk-8-jre python \
+            git graphviz \
+            python3 \
             gcc g++ make libgsl-dev \
             ruby-dev ruby-gsl ruby-ffi
           sudo gem install bundler
