config - drop pygments

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,6 @@ permalink: /:year/:month/:title/
 host: 127.0.0.1
 port: 4039
 
-highlighter: pygments
 lsi: false
 show_drafts: false
 future: false
@@ -13,7 +12,7 @@ source: content
 paginate: 5
 paginate_path: ":num"
 
-excerpt_separator:
+excerpt_separator: <!--more-->
 
 plugins:
   - jekyll-sitemap
@@ -27,11 +26,5 @@ tag_title_prefix: Archive for
 tag_meta_description_prefix: Damian Zaremba's Blog Archive For
 
 sitemap:
-    exclude:
-        - "/feed.xml"
-        - "/cf-pages/10xx.html"
-        - "/cf-pages/5xx.html"
-        - "/cf-pages/always_online.html"
-        - "/cf-pages/blocked.html"
-        - "/cf-pages/security_pitstop.html"
-        - "/cf-pages/under_attack.html"
+  exclude:
+    - "/feed.xml"
